more code tidying

--- a/views/categories/index.erb
+++ b/views/categories/index.erb
@@ -1,22 +1,19 @@
 <a href='/categories/new'> Add bookmark </a>
 
 <ul>
-
-<% sorted_categories =  @categories.sort { |a,b| a.genre.downcase <=> b.genre.downcase } %>
-
-
-  <% sorted_categories.each do |category| %>
-    <li>
-      <%= category.url %>
-      <br>
-      <%= category.name %>
-      <br>
-      <%= category.genre %>
-      <a href='/categories/<%=category.id%>/edit'> edit </a>
-      <form action='/categories/<%=category.id%>/delete' method='post'>
-        <button> delete </button>
-      </form>
-    </li>
-  <% end %>
+<% sorted_bookmarks =  @bookmarks.sort { |a,b| a.genre.downcase <=> b.genre.downcase } %>
+<% sorted_bookmarks.each do | bookmark | %>
+  <li>
+    <%= bookmark.url %>
+    <br>
+    <%= bookmark.name %>
+    <br>
+    <%= bookmark.genre %>
+    <a href='/categories/<%=bookmark.id%>/edit'> edit </a>
+    <form action='/categories/<%=bookmark.id%>/delete' method='post'>
+      <button> delete </button>
+    </form>
+  </li>
+<% end %>
 </ul>
 
