--- a/views/categories/_form.erb
+++ b/views/categories/_form.erb
@@ -1,21 +1,21 @@
 <dl>
   <dt>
-    <label for='category_url'> URL: </label>
+    <label for='bookmark_url'> URL: </label>
   </dt>
   <dd>
-    <input id='category_url' type='text' name='category[url]' value='<%= @category.url %>' autofocus>
+    <input id='bookmark_url' type='text' name='bookmark[url]' value='<%= @bookmark.url %>' autofocus>
   </dd>
   <dt>
-    <label for='category_name'> Name: </label>
+    <label for='bookmark_name'> Name: </label>
   </dt>
   <dd>
-    <input id='category_name' type='text' name='category[name]' value='<%= @category.name %>'>
+    <input id='bookmark_name' type='text' name='bookmark[name]' value='<%= @bookmark.name %>'>
   </dd>
   <dt>
-    <label for='category_genre'> Genre: </label>
+    <label for='bookmark_genre'> Genre: </label>
   </dt>
   <dd>
-    <input id='category_genre' type='text' name='category[genre]' value='<%= @category.genre %>'>
+    <input id='bookmark_genre' type='text' name='bookmark[genre]' value='<%= @bookmark.genre %>'>
   </dd>
 </dl>
 
