--- a/views/categories/edit.erb
+++ b/views/categories/edit.erb
@@ -1,4 +1,4 @@
-<form action='/categories/<%= @category.id %>' method='post'>
+<form action='/categories/<%= @bookmark.id %>' method='post'>
   <%= erb :'categories/_form' %>
   <button> update </button>
 </form>
