--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,7 +15,7 @@
     <nav>
       <ul>
         <li><a href='/'>Home</a></li>
-        <li><a href='/categories'>List bookmarks by genre</a></li>
+        <li><a href='/bookmarks'>List bookmarks by genre</a></li>
       </ul>
     </nav>
     <%= yield %>
